Fix the build to fully use .NET 6 SDK
- Don't depend on nuget.exe anymore
- Centralize the target frameworks
- Address issues around restore & build at the same time

--- a/src/SwiftUI.FSharp/SwiftUI.FSharp.fsproj
+++ b/src/SwiftUI.FSharp/SwiftUI.FSharp.fsproj
@@ -1,8 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="../../TargetFrameworks.props" />
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>$(DefaultTargetFrameworks)</TargetFrameworks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <OutputPath>..\..\managed\$(Configuration)</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
