--- a/src/SwiftUI/SwiftUI.csproj
+++ b/src/SwiftUI/SwiftUI.csproj
@@ -1,21 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../../LocalArtifacts.props" />
   <Import Project="../../TargetFrameworks.props" />
-  <Import Project="../../msbuild/Xamarin.SwiftUI.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>$(DefaultTargetFrameworks)</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(TargetFrameworks)' == '' ">$(DefaultTargetFrameworks)</TargetFrameworks>
+    <Nullable>enable</Nullable>
+    <DebugType>embedded</DebugType>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <OutputPath>..\..\managed\$(Configuration)</OutputPath>
 
     <!-- NuGet -->
     <NoWarn>NU5128</NoWarn>
-    <IncludeBuildOutput>false</IncludeBuildOutput>
-    <NuspecFile>..\..\Xamarin.SwiftUI.nuspec</NuspecFile>
-    <NuspecProperties>configuration=$(Configuration);version=$(Version)</NuspecProperties>
+    <PackageId>SwiftUI.NET</PackageId>
+    <Authors>Alex Corrado</Authors>
     <PackageOutputPath>$(ArtifactOutputPath)</PackageOutputPath>
-    <NuspecBasePath>..\..</NuspecBasePath>
+    <PackageTags>apple;ios;macos;swiftui;swift;ui;toolkit</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,18 +37,39 @@
     <None Include="iOS\**\*.*" />
   </ItemGroup>
 
-  <PropertyGroup Condition=" '$(TargetPlatformIdentifier)' != '' ">
-    <!-- Embed the native library where possible -->
+  <!-- Additional files to pack in the nuget -->
+  <ItemGroup>
+    <None Include="$(OutputPath)\**\SwiftUI.FSharp.dll" Pack="true" PackagePath="lib" Visible="false" />
+    <None Include="..\SwiftUI.Analyzers\bin\$(Configuration)\netstandard2.0\SwiftUI.Analyzers.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+  </ItemGroup>
+
+  <PropertyGroup>
+    <!-- Package the native library -->
     <IsBindingProject>true</IsBindingProject>
+    <NoBindingEmbedding>true</NoBindingEmbedding>
   </PropertyGroup>
 
   <ItemGroup>
+    <NativeReference Include="..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework" Condition="Exists('..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework')" Kind="Framework" Visible="false" />
+    <NativeReference Include="..\..\native\$(Configuration)\$(TargetFramework)\*.dylib" Kind="Dynamic" Visible="false" />
+
     <!-- KLUDGE: We auto-generate a blank file for this -->
     <ObjcBindingApiDefinition Include="$(IntermediateOutputPath)\ApiDefinition.cs" />
-    <ObjcBindingNativeFramework Include="..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework" Condition="Exists('..\..\native\$(Configuration)\$(TargetFramework)\SwiftUIGlue.framework')" Visible="false" />
-    <ObjcBindingNativeLibrary Include="..\..\native\$(Configuration)\$(TargetFramework)\*.dylib" Visible="false" />
   </ItemGroup>
   <Target Name="CreateDummyApiDefinition" BeforeTargets="_GenerateBindings">
     <WriteLinesToFile Lines="" File="@(ObjcBindingApiDefinition)" Condition="!Exists('@(ObjcBindingApiDefinition)')" />
+  </Target>
+
+  <!-- FIXME: Remove this workaround once we get .NET SDK 6.0.400 (see https://github.com/dotnet/msbuild/issues/4584) -->
+  <PropertyGroup>
+    <GenerateNuspecDependsOn>
+      $(GenerateNuspecDependsOn);
+      _RemoveNativeManifestFromPack;
+    </GenerateNuspecDependsOn>
+  </PropertyGroup>
+  <Target Name="_RemoveNativeManifestFromPack">
+    <ItemGroup>
+      <_BuildOutputInPackage Remove="@(_BuildOutputInPackage)" Condition="'%(Filename)%(Extension)' == 'Native.SwiftUI.manifest'" />
+    </ItemGroup>
   </Target>
 </Project>
