--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
         continue-on-error: true
 
       - name: Retry build build.proj
-        if: job.steps.BuildProj.status == failure()
+        if: ${{ failure() }}
         run: dotnet msbuild build.proj /p:Configuration=Release /t:Build /p:Version=${{ github.run_number }}
       
       - name: Build SwiftUI.Tests.FSharp
