--- a/LocalArtifacts.props
+++ b/LocalArtifacts.props
@@ -1,6 +1,6 @@
 <Project>
 	<PropertyGroup>
-		<!-- Note: this Version only affects packages produced locally. For CI/release package version, change azure-pipelines.yaml -->
+		<!-- Note: this Version only affects packages produced locally. For CI/release package version, change VERSION file -->
 		<Version Condition=" '$(Version)' == '' ">99.0.0-pre</Version>
 
 		<!-- Directory to place created packages -->
