Update Github Action (#49)
* Update Github Action

* Add Build Status to Readme.md

* Install iOS and macOS workloads.

* Fix pathing to dylib in Test projects - Use $(MacTargetFramework)

* Fix pathing to badge and add some extra blurb about the project :) .

* Renamed: master -> main, Xamarin.SwiftUI -> SwiftUI.NET

* Use version of .NET SDK from global.json, and bump that to 6.0.300

* Create artifacts dir in build.proj instead of GH action

This will fix the issue for people running local builds too

* [actions] Standardize build commands, restore samples build, comment out nuget publishing (for now)

* [actions] We don't need nuget CLI tools anymore

* Remove Restore Xamarin.SwiftUI.sln step

Don't remember why we had that, but it shouldn't be needed

* Only retry on an actual failure

* Version and create package

* Use macos-12 runners

* Remove azure-pipelines.yaml

Co-authored-by: Alex Corrado <alexander.corrado@gmail.com>

--- a/tests/SwiftUI.Tests/SwiftUI.Tests.csproj
+++ b/tests/SwiftUI.Tests/SwiftUI.Tests.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="Subjects\" />
-		<None Include="..\..\native\$(Configuration)\$(TargetFramework)-macos\libSwiftUIGlue.dylib" Visible="false">
+		<None Include="..\..\native\$(Configuration)\$(MacTargetFramework)\libSwiftUIGlue.dylib" Visible="false">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
