--- a/samples/C#/Samples.csproj
+++ b/samples/C#/Samples.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="../../LocalArtifacts.props" />
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-macos</TargetFramework>
     <SupportedOSPlatformVersion>10.15</SupportedOSPlatformVersion>
     <RuntimeIdentifiers>osx-arm64;osx-x64</RuntimeIdentifiers>
   </PropertyGroup>
-
   <ItemGroup>
     <None Include="Info.plist" />
-    <PackageReference Include="SwiftUI.NET" Version="$(Version)" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\SwiftUI\SwiftUI.csproj" />
+    <ProjectReference Include="..\..\src\SwiftUI.Analyzers\SwiftUI.Analyzers.csproj" PrivateAssets="all"
+                      ReferenceOutputAssembly="false"
+                      OutputItemType="Analyzer"/>
   </ItemGroup>
 </Project>
