--- a/src/SwiftUI.Analyzers/SwiftUI.Analyzers.csproj
+++ b/src/SwiftUI.Analyzers/SwiftUI.Analyzers.csproj
@@ -14,7 +14,7 @@
 
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'Default' ">
     <StartAction>Program</StartAction>
-    <StartProgram>$(HOME)/.nuget/packages/microsoft.net.compilers.toolset/3.8.0/tasks/netcoreapp3.1/bincore/csc.dll</StartProgram>
+    <StartProgram>..\..\..\..\.nuget\packages\microsoft.net.compilers.toolset\3.8.0\tasks\netcoreapp3.1\bincore\csc.dll</StartProgram>
     <RefAsmPath>/usr/local/share/dotnet/packs/Microsoft.NETCore.App.Ref/5.0.0/ref/net5.0</RefAsmPath>
     <StartArguments>-langversion:9.0 -t:library -a:SwiftUI.Analyzers.dll -r:$(RefAsmPath)/System.Runtime.dll -r:$(RefAsmPath)/mscorlib.dll -r:$(RefAsmPath)/netstandard.dll -r:$(SolutionDir)/managed/Debug/netstandard2.1/SwiftUI.dll $(HOME)/Projects/Xamarin.SwiftUI-samples/HelloWorld/HelloView.cs</StartArguments>
     <ExternalConsole>false</ExternalConsole>
